--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   <h1>Hello World!</h1>
   <p>첫 웹페이지를 만들었습니다 🎉</p>
   <p>줄바꾸기를 배워볼거에요<br>됬을까요?</p>
+  <h1>판매 중인 과일</h1>
+<ul>
+  <li>바나나</li>
+  <li>사과</li>
+  <li>수박</li>
+</ul>
 </body>
 </html>
