--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
   <li>사과</li>
   <li>수박</li>
 </ul>
+<dl>
+  <dt>HTML</dt>
+  <dd>HTML은 Hyper Text Markup Language의 약자로 웹 문서의 구조를 설계하기 위한 목적으로 개발된 언어입니다.</dd>
+  <dt>CSS</dt>
+  <dd>CSS는 Cascading Style Sheets의 약자로 웹 문서를 꾸미기 위한 목적으로 개발된 언어입니다.</dd>
+</dl>
 </body>
 </html>
