--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
   <dd>CSS는 Cascading Style Sheets의 약자로 웹 문서를 꾸미기 위한 목적으로 개발된 언어입니다.</dd>
 </dl>
 <a href="https://alwayslearningyeah.github.io/html-practice/" target="_blank" title="링크 연습">연습 링크</a>
+<p><strong>시설 이용자는 <strong>아래에 안내되어 있는 수칙</strong>을 반드시 지켜야 합니다.</strong></p>
 </body>
 </html>
