--- a/index.html
+++ b/index.html
@@ -22,5 +22,27 @@
 </dl>
 <a href="https://alwayslearningyeah.github.io/html-practice/" target="_blank" title="링크 연습">연습 링크</a>
 <p><strong>시설 이용자는 <strong>아래에 안내되어 있는 수칙</strong>을 반드시 지켜야 합니다.</strong></p>
+<input type="text">
+<input type="password">
+<input type="tel">
+<input type="number">
+<input type="url">
+<input type="search">
+<input type="email">
+<input type="checkbox">
+<input type="radio">
+<input type="file">
+<input type="button">
+<input type="image" src="facebook.png">
+<input type="hidden">
+<input type="date">
+<input type="datetime-local">
+<input type="month">
+<input type="week">
+<input type="time">
+<input type="range">
+<input type="color">
+<input type="submit">
+<input type="reset">
 </body>
 </html>
