--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
 <input type="color">
 <input type="submit">
 <input type="reset">
+<label>
+  아이디
+  <input type="text">
+</label>
 </body>
 </html>
