--- a/index.html
+++ b/index.html
@@ -48,5 +48,29 @@
   아이디
   <input type="text">
 </label>
+<form>
+  <fieldset>
+    <legend>기본 정보</legend> 
+    <p>
+      <label for="userid">아이디</label>
+      <input type="text" id="userid">
+    </p>
+    <p>
+      <label for="passwd">비밀번호</label>
+      <input type="password" id="passwd">
+    </p>
+  </fieldset>
+  <fieldset>
+    <legend>선택 정보</legend>
+    <p>
+      <label for="age">나이</label>
+      <input type="number" id="age">
+    </p>
+    <p>
+      <label for="recommender">추천인</label>
+      <input type="text" id="recommender">
+    </p>
+  </fieldset>
+</form>
 </body>
 </html>
