--- a/index.html
+++ b/index.html
@@ -12,14 +12,35 @@
 
         <h2>Health</h2>
             <h3>Meditation</h3>
-
+                <p>50분 마다 세 질문 반복</p>
+                <ol>
+                    <li>
+                        <strong>시작 전</strong>:
+                        이미 아는 것 / 헷갈리는 것 / 완전히 모르는 것 구별하기
+                    </li>
+                    <li>
+                        <strong>중간</strong>:
+                        지금 하는 방식이 먹히는가?
+                        (예: 그냥 읽기 vs 문제 풀기)
+                    </li>
+                    <li>
+                        <strong>끝난 후</strong>:
+                        지금 이 내용을 내 말로 1분 설명 할 수 있는가?
+                        직접 말해보기
+                    </li>
+                </ol>
+                <p>지금 무엇을 하는지 관찰하기</p>
             <h3>Posture correction</h3>
 
             <h3>Weight training</h3>
 
+            <h3>Breathing retraining</h3>
         <h2>Study</h2>
             <h3>English</h3>
 
             <h3>Mathemetics</h3>
+
+            <h3>Html</h3>
+                <p></p>
     </body>
 </html>
