--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h1>Memo</h1>
 
         <h2>To Do list</h2>
-            <ol>
+            <ul>
                 <li>안경 맞추기</li>
                 <li>도시락 준비</li>
                 <li>집 정리</li>
-            </ol>
+            </ul>
 
         <h2>Health</h2>
             <h3>Meditation</h3>
@@ -38,6 +38,14 @@
                 </ol>
                 <p>지금 무엇을 하는지 관찰하기</p>
             <h3>Posture correction</h3>
+                <h4>앉는 자세</h4>
+                    <p><strong>기본 자세 세팅</strong></p>
+                    <ol>
+                        <li>발바닥 전체를 방바닥에 평평히 붙이고 무릎을 90-110도 굽혀 햄스트링이 과도하게 당겨지지 않도록 하세요.</li>
+                        <li>골반을 중립으로 유지하며 꼬리뼈를 살짝들어올려 엉덩이에 힘을주고, 복부와 골반기저근을 가볍게 조이세요.</li>
+                        <li>상체는 앞으로 100-110도 기울여 허리의 자연스러운 S자를 유지하세요.</li>
+                    </ol>
+
 
             <h3>Weight training</h3>
 
