--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Memo</title>
     </head>
 
@@ -12,12 +11,9 @@
             <a href="scratch/">Scratch</a>
         </h1>
 
-        <h2>To Do list</h2>
-            <ul>
-                <li>안경 맞추기</li>
-                <li>도시락 준비</li>
-                <li>집 정리</li>
-            </ul>
+        <h2>
+            <a href="to-do-list/">To Do list</a>
+        </h2>
 
         <h2>Health</h2>
             <h3>Meditation</h3>
