--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko"></html>
+<html lang="ko">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-compatible" content="IE=edgh" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To do list</title>
     </head>
     <body>
+        <h1>To do list</h1>
+        
         <ul>
             <li>안경 맞추기</li>
             <li>도시락 준비</li>
             <li>집 정리</li>
         </ul>
     </body>
+</html>
