--- a/health/index.html
+++ b/health/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-compatible"
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Health</title>
     </head>
+
+    <body>
+        <h1>Health</h1>
+    </body>
 </html>
