--- a/scratch/index.html
+++ b/scratch/index.html
@@ -11,5 +11,16 @@
         <h2>실무에서 자주 사용하는 html 필수 태그 다루기</h2>
             <h3>하이퍼링크</h3>
                 <a href="https://www.naver.com" target="_blank" title="네이버" rel="noopener norefferer">네이버</a>
-    </body>
+
+            <h3>폼</h3>
+            <form action=# method="post">
+                <label for="id">아이디</label>
+                <input type="text" id="id" name="id">
+
+                <label for="pw">비밀번호</label>
+                <input type="pw" id="pw" name="pw">
+
+                <button type="submit">로그인</button>
+            </form>
+            </body>
 </html>
