--- a/scratch/index.html
+++ b/scratch/index.html
@@ -14,13 +14,16 @@
 
             <h3>폼</h3>
             <form action=# method="post">
-                <label for="id">아이디</label>
-                <input type="text" id="id" name="id">
+                <fieldset>
+                    <legend>로그인 정보 입력</legend>
+                    <label for="id">아이디</label>
+                    <input type="text" id="id" name="id">
 
-                <label for="pw">비밀번호</label>
-                <input type="pw" id="pw" name="pw">
+                    <label for="pw">비밀번호</label>
+                    <input type="pw" id="pw" name="pw">
 
-                <button type="submit">로그인</button>
+                    <button type="submit">로그인</button>
+                </fieldset>
             </form>
             </body>
 </html>
