--- a/scratch/index.html
+++ b/scratch/index.html
@@ -27,8 +27,8 @@
             </form>
 
             <h3>input과 textarea의 차이</h3>
-                <input type="text" value="초기값">
-                <textarea>초기값</textarea>
+                <input type="text" placeholder="초기값">
+                <textarea placehoder="초기값"></textarea>
 
             </body>
 </html>
