--- a/scratch/index.html
+++ b/scratch/index.html
@@ -28,6 +28,25 @@
                 </fieldset>
             </form>
 
+            <form action="#" method="post">
+                <fieldset>
+                    <legend>거주지</legend>
+                    <label for="거주지">거주지</label>
+                    <select>
+                        <option value="" disabled selected>선택하세요</option>
+                        <optgroup label="한국">
+                            <option value="서울">서울</option>
+                            <option value="부산">부산</option>
+                        </optgroup>
+                        <optgroup label="일본">
+                            <option value="도쿄">도쿄</option>
+                            <option value="오사카">오사카</option>
+                        </optgroup>
+                    </select>
+                    <button type="submit">제출</button>
+                </fieldset>
+            </form>
+
             <h3>input과 textarea의 차이</h3>
                 <input type="text" placeholder="초기값">
                 <textarea placeholder="초기값">뭘넣으면</textarea>
