--- a/scratch/index.html
+++ b/scratch/index.html
@@ -31,16 +31,16 @@
             <form action="#" method="post">
                 <fieldset>
                     <legend>거주지</legend>
-                    <label for="거주지">거주지</label>
-                    <select>
+                    <label for="residence">거주지</label>
+                    <select id="residence" name="residence">
                         <option value="" disabled selected>선택하세요</option>
                         <optgroup label="한국">
-                            <option value="서울">서울</option>
-                            <option value="부산">부산</option>
+                            <option value="seoul">서울</option>
+                            <option value="busan">부산</option>
                         </optgroup>
                         <optgroup label="일본">
-                            <option value="도쿄">도쿄</option>
-                            <option value="오사카">오사카</option>
+                            <option value="tokyo">도쿄</option>
+                            <option value="osaka">오사카</option>
                         </optgroup>
                     </select>
                     <button type="submit">제출</button>
