--- a/scratch/index.html
+++ b/scratch/index.html
@@ -32,7 +32,7 @@
                 <fieldset>
                     <legend>거주지</legend>
                     <label for="residence">거주지</label>
-                    <select id="residence" name="residence">
+                    <select id="residence" name="residence" required>
                         <option value="" disabled selected>선택하세요</option>
                         <optgroup label="한국">
                             <option value="seoul">서울</option>
