--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -14,6 +14,7 @@
             <li>집 정리</li>
             <li>자일리톨 스톤</li>
             <li>여러 사이즈 비닐 사기</li>
+            <li>연말정산</li>
         </ul>
     </body>
 </html>
