--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1>Memo</h1>
 
-        <h2>
+        <h2 class="rainbow">
             <a href="scratch/">Scratch</a>
         </h2>
 
