--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <body>
         <h1>Memo</h1>
 
-        <h2 class="rainbow">
-            <a href="scratch/">Scratch</a>
+        <h2>
+            <a href="scratch/"
+            class="rainbow">Scratch</a>
         </h2>
 
         <h2>
