--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </h2>
 
         <h2>
-            <a href="health/">Health</a>
+            <a href="health/"
+            class="rainbow">Health</a>
         </h2>
 
             <h3>Meditation</h3>
@@ -65,7 +66,8 @@
 
 
         <h2>
-            <a href="study/">Study</a>
+            <a href="study/"
+            class="rainbow">Study</a>
         </h2>
             <h3>English</h3>
 
