--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         </h2>
 
         <h2>
+            <a href="implementation-ideas/"
+            class="rainbow">Implementation Ideas</a>
+        </h2>
+
+        <h2>
             <a href="to-do-list/"
             class="rainbow">To Do list</a>
         </h2>
